--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brand Identity projet STEP</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main class="main">
+        <!-- Header -->
+        <img src="./images/Header.svg" alt="" loading="eager">
+        <!-- Context -->
+        <img src="./images/Contexte.svg" alt="" loading="lazy">
+    </main>
 </body>
 </html>
