--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <main class="main">
         <!-- Header -->
-        <img src="./images/Header.svg" alt="" loading="eager">
+        <img class="image" src="./images/Header.svg" alt="" loading="eager">
         <!-- Context -->
-        <img src="./images/Contexte.svg" alt="" loading="lazy">
+        <img class="image" src="./images/Contexte.svg" alt="" loading="lazy">
     </main>
 </body>
 </html>
