--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="Navbar">
+        <div class="Container">
+            <p>Cliquez sur les boutons pour accéder aux pages des secteurs d’activité</p>
+            <div class="Menus">
+                <a href="#" class="Button">STEP</a>
+                <a href="#" class="Button Inactive">Mwendo</a>
+                <a href="#" class="Button Inactive">Bioterre</a>
+                <a href="#" class="Button Inactive">Urithi</a>
+                <a href="#" class="Button Inactive">Shauri</a>
+            </div>
+        </div>
+        <img src="./images/arrow.svg" alt="">
+    </div>
     <main class="main">
         <!-- Header -->
         <img class="image" src="./images/Header.svg" alt="" loading="eager">
