--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
         <img class="image" src="./images/Header.svg" alt="" loading="eager">
         <!-- Context -->
         <img class="image" src="./images/Contexte.svg" alt="" loading="lazy">
+        <!-- Divser -->
+        <img class="image" src="./images/Diviser-1.svg" alt="" loading="lazy">
+        <!-- Strategy -->
+        <img class="image" src="./images/Strategy.svg" alt="" loading="lazy">
+        <!-- Divser2 -->
+        <img class="image" src="./images/Diviser-2.svg" alt="" loading="lazy">
+        <!-- 01 Symbole -->
+        <img class="image" src="./images/01.Symbole.svg" alt="" loading="lazy">
+        <!-- Divser3 -->
+        <img class="image" src="./images/Diviser-3.svg" alt="" loading="lazy">
+        <!-- 02 Logotype -->
+        <img class="image" src="./images/02.Logotype.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 03. Typography -->
+        <img class="image" src="./images/03.Typography.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 04 Colors -->
+        <img class="image" src="./images/04.Couleurs.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Mockup -->
+        <img class="image" src="./images/Mockup.svg" alt="" loading="lazy">
     </main>
 </body>
 </html>
