--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <img src="./images/arrow.svg" alt="">
     </div>
-    <main class="main">
+    <main class="main" id="step">
         <!-- Header -->
         <img class="image" src="./images/Header.svg" alt="" loading="eager">
         <!-- Context -->
@@ -49,6 +49,10 @@
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- Mockup -->
         <img class="image" src="./images/Mockup.svg" alt="" loading="lazy">
+    </main>
+    <main class="main" id="mwendo">
+        <!-- Header -->
+        <img class="image" src="./images/Header.svg" alt="" loading="eager">
     </main>
 </body>
 </html>
