add paterne section in STEP

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <img class="image" src="./images/04.Couleurs.svg" alt="" loading="lazy">
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 05 Paterne -->
+        <img class="image" src="./images/05.Paterne.svg" alt="" loading="lazy">
+         <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- Mockup -->
         <img class="image" src="./images/Mockup.svg" alt="" loading="lazy">
     </main>
