--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
         <div class="Container">
             <p>Cliquez sur les boutons pour accéder aux pages des secteurs d’activité</p>
             <div class="Menus">
-                <a href="#" class="Button">STEP</a>
-                <a href="#" class="Button Inactive">Mwendo</a>
-                <a href="#" class="Button Inactive">Bioterre</a>
-                <a href="#" class="Button Inactive">Urithi</a>
-                <a href="#" class="Button Inactive">Shauri</a>
+                <a href="#" class="Button" id="Step">STEP</a>
+                <a href="#" class="Button Inactive" id="Mwendo">Mwendo</a>
+                <a href="#" class="Button Inactive" id="Bioterre">Bioterre</a>
+                <a href="#" class="Button Inactive" id="Urithi">Urithi</a>
+                <a href="#" class="Button Inactive" id="Shauri">Shauri</a>
             </div>
         </div>
         <img src="./images/arrow.svg" alt="">
     </div>
-    <main class="main" id="step">
+
+    <!-- Les mains -->
+    <main class="main" id="MainStep">
         <!-- Header -->
         <img class="image" src="./images/Header.svg" alt="" loading="eager">
         <!-- Context -->
@@ -54,9 +56,27 @@
         <!-- Mockup -->
         <img class="image" src="./images/Mockup.svg" alt="" loading="lazy">
     </main>
-    <main class="main" id="mwendo">
+    <!-- Mwendo -->
+    <main class="main" id="MainMwendo">
         <!-- Header -->
         <img class="image" src="./images/Header.svg" alt="" loading="eager">
     </main>
+    <!-- Bioterre -->
+    <main class="main" id="MainBioterre">
+        <!-- Header -->
+        <img class="image" src="./images/Header.svg" alt="" loading="eager">
+    </main>
+    <!-- Urithi -->
+    <main class="main" id="MainUrithi">
+        <!-- Header -->
+        <img class="image" src="./images/Header.svg" alt="" loading="eager">
+    </main>
+    <!-- Shauri -->
+    <main class="main" id="MainShauri">
+        <!-- Header -->
+        <img class="image" src="./images/Header.svg" alt="" loading="eager">
+    </main>
+
+    <script src="./script.js"></script>
 </body>
 </html>
