--- a/index.html
+++ b/index.html
@@ -59,7 +59,25 @@
     <!-- Mwendo -->
     <main class="main" id="MainMwendo">
         <!-- Header -->
-        <img class="image" src="./images/Header.svg" alt="" loading="eager">
+        <img class="image" src="./images/Mwendo/Header.svg" alt="" loading="eager">
+        <!-- Contexte -->
+        <img class="image" src="./images/Mwendo/Contexte.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 01 Symbole -->
+        <img class="image" src="./images/Mwendo/01.Symbole.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 02 Logotype -->
+        <img class="image" src="./images/Mwendo/02.Logotype.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 03 Couleurs -->
+        <img class="image" src="./images/Mwendo/03.Couleurs.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Mockup -->
+        <img class="image" src="./images/Mwendo/Mockup.svg" alt="" loading="lazy">
     </main>
     <!-- Bioterre -->
     <main class="main" id="MainBioterre">
