--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- 01 Symbole -->
-        <img class="image" src="./images/Mwendo/01.Symbole.svg" alt="" loading="lazy">
+        <img class="image" src="./images/Mwendo/01.Symbole.svg" alt="" loading="eager">
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- 02 Logotype -->
@@ -77,7 +77,7 @@
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- Mockup -->
-        <img class="image" src="./images/Mwendo/Mockup.svg" alt="" loading="lazy">
+        <img class="image" src="./images/Mwendo/Mockup.jpg" alt="" loading="lazy">
     </main>
     <!-- Bioterre -->
     <main class="main" id="MainBioterre">
