--- a/index.html
+++ b/index.html
@@ -92,7 +92,27 @@
     <!-- Shauri -->
     <main class="main" id="MainShauri">
         <!-- Header -->
-        <img class="image" src="./images/Header.svg" alt="" loading="eager">
+        <img class="image" src="./images/Shauri/Header.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Contexte -->
+        <img class="image" src="./images/Shauri/Contexte.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 01 Symoble -->
+        <img class="image" src="./images/Shauri/01.Symbole.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 02 Logotype -->
+        <img class="image" src="./images/Shauri/02.Logotype.png" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 03 Couleurs -->
+        <img class="image" src="./images/Shauri/03.Couleurs.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Mockup -->
+        <img class="image" src="./images/Shauri/Mockup.jpg" alt="" loading="lazy">
     </main>
 
     <script src="./script.js"></script>
