--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Divser3 -->
         <img class="image" src="./images/Diviser-3.svg" alt="" loading="lazy">
         <!-- 02 Logotype -->
-        <img class="image" src="./images/02.Logotype.svg" alt="" loading="lazy">
+        <img class="image" src="./images/02.Logotype.svg" alt="" loading="eager">
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- 03. Typography -->
@@ -54,7 +54,7 @@
          <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- Mockup -->
-        <img class="image" src="./images/Mockup.svg" alt="" loading="lazy">
+        <img class="image" src="./images/Mockup.svg" alt="" loading="eager">
     </main>
     <!-- Mwendo -->
     <main class="main" id="MainMwendo">
@@ -77,12 +77,32 @@
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- Mockup -->
-        <img class="image" src="./images/Mwendo/Mockup.jpg" alt="" loading="lazy">
+        <img class="image" src="./images/Mwendo/Mockup.jpg" alt="" loading="eager">
     </main>
     <!-- Bioterre -->
     <main class="main" id="MainBioterre">
         <!-- Header -->
-        <img class="image" src="./images/Header.svg" alt="" loading="eager">
+        <img class="image" src="./images/Bioterre/Header.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Contexte -->
+        <img class="image" src="./images/Bioterre/Contexte.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 01 Symoble -->
+        <img class="image" src="./images/Bioterre/01.Symbole.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 02 Logotype -->
+        <img class="image" src="./images/Bioterre/02.Logotype.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 03 Couleurs -->
+        <img class="image" src="./images/Bioterre/03.Couleurs.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Mockup -->
+        <img class="image" src="./images/Bioterre/Mockup.png" alt="" loading="eager">
     </main>
     <!-- Urithi -->
     <main class="main" id="MainUrithi">
@@ -104,7 +124,7 @@
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- 02 Logotype -->
-        <img class="image" src="./images/Shauri/02.Logotype.png" alt="" loading="lazy">
+        <img class="image" src="./images/Shauri/02.Logotype.svg" alt="" loading="eager">
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- 03 Couleurs -->
@@ -112,7 +132,7 @@
         <!-- Divser4 -->
         <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
         <!-- Mockup -->
-        <img class="image" src="./images/Shauri/Mockup.jpg" alt="" loading="lazy">
+        <img class="image" src="./images/Shauri/Mockup.jpg" alt="" loading="eager">
     </main>
 
     <script src="./script.js"></script>
