--- a/index.html
+++ b/index.html
@@ -107,7 +107,27 @@
     <!-- Urithi -->
     <main class="main" id="MainUrithi">
         <!-- Header -->
-        <img class="image" src="./images/Header.svg" alt="" loading="eager">
+        <img class="image" src="./images/Urithi/Header.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Contexte -->
+        <img class="image" src="./images/Urithi/Contexte.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 01 Symoble -->
+        <img class="image" src="./images/Urithi/01.Symbole.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 02 Logotype -->
+        <img class="image" src="./images/Urithi/02.Logotype.svg" alt="" loading="eager">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- 03 Couleurs -->
+        <img class="image" src="./images/Urithi/03.Couleurs.svg" alt="" loading="lazy">
+        <!-- Divser4 -->
+        <img class="image" src="./images/Diviser-4.svg" alt="" loading="lazy">
+        <!-- Mockup -->
+        <img class="image" src="./images/Urithi/Mockup.png" alt="" loading="eager">
     </main>
     <!-- Shauri -->
     <main class="main" id="MainShauri">
