--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brand Identity projet STEP</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Brand identity STEP">
+    <meta property="og:description" content="Brand identity projet STEP | Create by EN7DESIGN">
+    <meta property="og:image" content="https://brand-identity-step.vercel.app/images/Header.svg">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Brand identity STEP">
+    <meta name="twitter:description" content="Brand identity projet STEP | Create by EN7DESIGN">
+    <meta name="twitter:image" content="https://brand-identity-step.vercel.app/images/Header.svg">
 </head>
 <body>
     <div class="Navbar">
