--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Brand identity STEP">
     <meta property="og:description" content="Brand identity projet STEP | Create by EN7DESIGN">
-    <meta property="og:image" content="https://brand-identity-step.vercel.app/images/Header.svg">
+    <meta property="og:image" content="https://brand-identity-step.vercel.app/images/Webclip.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Brand identity STEP">
     <meta name="twitter:description" content="Brand identity projet STEP | Create by EN7DESIGN">
-    <meta name="twitter:image" content="https://brand-identity-step.vercel.app/images/Header.svg">
+    <meta name="twitter:image" content="https://brand-identity-step.vercel.app/images/Webclip.png">
+    
 </head>
 <body>
     <div class="Navbar">
